Fixed overflow issue on chrome

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -96,7 +96,6 @@
         height: 110%;
         grid-area: 3 / 3 / 4 / 5;
         align-content: center;
-        overflow: hidden;
 
         > h2 {
             width: 10ch;
